# WindowTool

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  README.md  build.rc  config.json  rustfmt.toml
core/: Cargo.toml  build.rs
core/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs
crates/jdk_manager/: Cargo.toml
crates/jdk_manager/src/: jdk_manager.rs  lib.rs
crates/service/: Cargo.toml
crates/service/src/: service.rs
crates/shell/: Cargo.toml
crates/shell/src/: lib.rs  probation.rs  shell.rs
document/: old.txt
include/WinTool/helper/: ConfigManager.h  config_manager.h  navicat_cleanup.h  service_helper.h
include/WinTool/ui/: MainWindow.h  jdks_widget.h  main_window.h  misc.h  service_widget.h
lib/helper/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h
lib/ui_jdks/: CMakeLists.txt  JdksWidget.cpp  JdksWidget.h
lib/ui_service/: CMakeLists.txt  ServiceWidget.cpp  ServiceWidget.h  ServiceWidget.ui
resources/: app.manifest  application.rc
resources/theme/: QtTheme.qrc
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  build.rs  main.cpp  main.rs
src/helper/: CMakeLists.txt  ConfigManager.cpp  config_manager.cpp  navicat_cleanup.cpp  service_helper.cpp
src/ui/: CMakeLists.txt  JdksWidget.cpp  MainWindow.cpp  MainWindow.ui  ServiceInfo.h  ServiceWidget.cpp  jdks_widget.cpp  jdks_widget.ui  main_window.cpp  misc.cpp  misc.ui  service_widget.cpp  service_widget.ui
src/util/: mod.rs  registry_util.rs  windows_service_util.rs
windows_tool/: Cargo.toml  build.rs
windows_tool/src/: main.rs
