[package]
name = "WindowTool"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
windows-service = "0.8.0"
dialoguer = "0.11"
env_logger = "0.11.8"

# windows下打包才添加这个carte
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# 包的元数据,对winres来说有用,打包后在exe属性的详情中可以看到
[package.metadata.winres]
OriginalFilename = "WindowTool.exe"
LegalCopyright = "Copyright © 2025 Yangxj96"
FileDescription = "这是一个windows下的小工具,个人使用"
FileVersion = "2025.7.1.0"
ProductName = "小工具"
ProductVersion = "2025.7.1.0"
