[workspace]
members = ["core", "crates/service", "crates/shell"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://www.yangxj96.com"
rust-version = "1.87"
version = "0.0.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"

[workspace.dependencies]
# 本地依赖管理
windows_tool_service = { path = "crates/service", version = "0.0.1" }
windows_tool_shell = { path = "crates/shell", version = "0.0.1" }
# 外部依赖管理
windows-service = "0.8.0"
dialoguer = "0.11"
env_logger = "0.11.8"
