[package]
name = "windows_tool_jdk_manager"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
# 遍历目录
walkdir.workspace = true
# 获取系统路径,比如AppData
dirs.workspace = true
# 注册表操作
winreg.workspace = true
dialoguer.workspace = true
winapi = { workspace = true, features = ["winuser"] }
